[project]
name = "llama-cpp-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cohere>=5.20.7",
    "ddgs>=9.10.0",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "kiwipiepy>=0.22.2",
    "langchain>=1.2.9",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "numexpr>=2.14.1",
    "pandas>=3.0.1",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.8.0",
]
